tests/cases/ok/booleans.p4
def main() -> None:
    print(True and False)
    print(True or False)
    print(not False)
    print(not 1 > 2)
    print(1 < 2 < 3)
    print(5 < 4 < 3)
    print(True or False and False)
