tests/cases/fail/non_bool_boolean_operator.p4
def main() -> None:
    print(1 and True)
